# arka-netra

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  explanation.md  pyproject.toml
app/: streamlit_app.py
configs/: mvp.yaml
docs/: DOC-001_ArkaNetra_Constitution_v1.0.md  DOC-001_Project_Solaris_Constitution_v1.0.md  DOC-002_Decision_Log.md  DOC-008_ArkaNetra_Constitution_Coverage_Audit.md  DOC-401_Hackathon_Roadmap.md  DOC-402_Task_Board.md  DOC-403_Risk_Register.md  DOC-501_Judge_Question_Bank.md  DOC-502_Technical_Defense_Handbook.md  DOC-503_Demo_Script.md  DOC-601_MVP_to_Final_Version_Development_Plan.md  DOC-602_Milestone_1.1_Demo_Hardening_Report.md  DOC-603_Current_MVP_to_Final_Full_Version_Implementation_Plan.md  DOC-603_phase1_goes_source.md  DOC-604_phase2_hard_xray_swot.md  DOC-605_phase3_aditya_l1_plan.md  DOC-606_solexs_schema.md  DOC-607_hel1os_schema.md  DOC-608_phase3_verification_report.md  DOC-610_phase4_verification_report.md  DOC-611_operating_handbook.md  DOC-612_publication_materials.md  DOC-613_phase5_verification_report.md  DOC-614_Phase6_Verification_Report.md  DOC-700_Grand_Unified_Implementation_Plan.md  DOC-701_Phase1_Verification_Report.md  DOC-702_Phase2_Verification_Report.md  DOC-703_Phase3_Verification_Report.md  DOC-704_Phase4_Verification_Report.md  DOC-705_Phase5_Verification_Report.md  DOC-706_Phase6_Verification_Report.md  DOC-707_Phase7_Verification_Report.md  cross_calibration.md
monitoring/: orchestrator_state.json  retrain_trigger.json  validation_history.json
(+130 files in other folders)
